# LostPetTest

./: .gitignore  README.md  REGIONAL_EXTRACTION_GUIDE.md  RESEARCH_BACKBONES.md  SUMMARY.md  Tiger_ReID_PaperStyle_MetricLearning.ipynb  baseline_dinov3.ipynb  baseline_dinov3.py  check_overlap.py  config.py  config_dinov3l_petface.py  config_dinov3s.py  config_multilevel_b.py  config_multilevel_swin.py  config_petface.py  config_petface_landmark.py  config_regional.py  config_research.py  config_swinl.py  config_swint.py  config_training.py  config_vit_petface.py  create_large_test_split.py  create_petface_splits.py  create_valid_splits.py  debug_dinov3_structure.py  debug_swin_structure.py  demo_albumentations.py  filter_petface_valid_images.py  inspect_retrieval.py  launch.py  main.py  minimal_dinov3.py  petface_valid_images_with_ears.json  pyproject.toml  setup_dinov3.md  sweep.sh  test_baseline_model.py  test_bbox_expansion.py  test_bbox_extraction.py  (+32 more)
.ipynb_checkpoints/: config_petface-checkpoint.py  config_swin-checkpoint.py  train_petface-checkpoint.py  train_petface_landmark-checkpoint.py
CroppedReIDPrototype/: dataset_loader.py  generate_petface_subset.py  model_data.py  model_data_arcface.py  prepare_data_new.py
backend/: prepare_index.py  server.py
config/: config_dinov3b.py  config_dinov3l.py  config_multilevel.py  config_multilevel_advanced.py  config_multilevel_swin.py  config_resnet50_petface.py  config_swinb_petface.py
datasets/: __init__.py  create_petface_splits.py  dog_face_regional.py  dog_face_regional_dataset.py  dog_multipose.py  sampler.py  (+4 more)
(+67 files in other folders)
